--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
 *.pkl
 *.csv
+*.pyc
+*.cpython-39.pyc
 rxnorm2RXCUI.txt
 properties.ini
 wandb/*
 */__pycache__/*
 /__pycache__/*
 saved_models/*
+
+*/__pycache__
+
+src/__pycache__
+src/*/__pycache__
+
+*/*.pyc
+src/data_handler/__pycache__/modelDataBuilder.cpython-39.pyc
+.gitignore
+src/data_handler/__pycache__/start.cpython-39.pyc
